Fixes to opt compiler warnings caused by use of generic types in non-generic way. Reduce use of implementing interfaces full of constants (anti-pattern) and switch to invoke static.Make more fields final and some minor performance related tweaks.