@@ -11,9 +11,10 @@ package com.ibm.jikesrvm.opt;
 
 import com.ibm.jikesrvm.classloader.*;
 import com.ibm.jikesrvm.opt.ir.*;
-import java.util.*;
-import com.ibm.jikesrvm.opt.OPT_IndexPropagation.*;
+import static com.ibm.jikesrvm.opt.OPT_IndexPropagation.*;
+import static com.ibm.jikesrvm.opt.ir.OPT_Operators.*;
 import java.lang.reflect.Constructor;
+import java.util.*;
 
 /**
  * This class implements the redundant load elimination by
@@ -21,8 +22,7 @@ import java.lang.reflect.Constructor;
  *
  * @author Stephen Fink
  */
-final class OPT_LoadElimination extends
-OPT_OptimizationPlanCompositeElement implements OPT_Operators {
+final class OPT_LoadElimination extends OPT_OptimizationPlanCompositeElement {
 
   /**
    * @param round which round of load elimination is this?
@@ -55,7 +55,7 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    */
   private final int round;
 
-  final static class LoadEliminator extends OPT_CompilerPhase implements OPT_Operators{
+  final static class LoadEliminator extends OPT_CompilerPhase {
     public final String getName() {
       return  "Load Eliminator";
     }
@@ -99,7 +99,7 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    */
   final static boolean eliminateLoads(OPT_IR ir, OPT_DF_Solution available) {
     // maintain a mapping from value number to temporary register
-    HashMap registers = new HashMap();
+    HashMap<UseRecord,OPT_Register> registers = new HashMap<UseRecord,OPT_Register>();
     UseRecordSet UseRepSet = replaceLoads(ir, available, registers);
     replaceDefs(ir, UseRepSet, registers);
 
@@ -118,7 +118,7 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    * @param registers a place to store information about temp registers
    */
   final static UseRecordSet replaceLoads(OPT_IR ir, OPT_DF_Solution available, 
-                                          HashMap registers) {
+                                         HashMap<UseRecord,OPT_Register> registers) {
     UseRecordSet result = new UseRecordSet();
     OPT_SSADictionary ssa = ir.HIRInfo.SSADictionary;
     OPT_GlobalValueNumberState valueNumbers = ir.HIRInfo.valueNumbers;
@@ -206,7 +206,7 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    * @param registers mapping from valueNumber -> temporary register
    */
   final static void replaceDefs(OPT_IR ir, UseRecordSet UseRepSet, 
-                                 HashMap registers) {
+                                 HashMap<UseRecord,OPT_Register> registers) {
     OPT_SSADictionary ssa = ir.HIRInfo.SSADictionary;
     for (Enumeration e = ir.forwardInstrEnumerator(); e.hasMoreElements();) {
       OPT_Instruction s = (OPT_Instruction)e.nextElement();
@@ -307,8 +307,8 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    * @param type the type to store in the new register
    */
   static OPT_Register findOrCreateRegister(Object heapType, int valueNumber, 
-                                            HashMap registers, 
-                                            OPT_RegisterPool pool, VM_TypeReference type) {
+                                           HashMap<UseRecord,OPT_Register> registers,
+                                           OPT_RegisterPool pool, VM_TypeReference type) {
     UseRecord key = new UseRecord(heapType, valueNumber);
     OPT_Register result = (OPT_Register)registers.get(key);
     if (result == null) {
@@ -332,7 +332,8 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    * @param type the type to store in the new register
    */
   static OPT_Register findOrCreateRegister(Object heapType, int v1, int v2, 
-                                           HashMap registers, OPT_RegisterPool pool, 
+                                           HashMap<UseRecord,OPT_Register> registers,
+                                           OPT_RegisterPool pool, 
                                            VM_TypeReference type) {
     UseRecord key = new UseRecord(heapType, v1, v2);
     OPT_Register result = (OPT_Register)registers.get(key);
@@ -346,9 +347,9 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
 
   // A UseRecord represents a load that will be eliminated
   static class UseRecord {
-    Object type;              // may be either a VM_TypeReference or a VM_Field
-    int v1;                   // first value number (object pointer)
-    int v2;                   // second value number (array index)
+    final Object type;        // may be either a VM_TypeReference or a VM_Field
+    final int v1;             // first value number (object pointer)
+    final int v2;             // second value number (array index)
     final static int NONE = -2;
 
     UseRecord(Object type, int valueNumber) {
@@ -373,8 +374,8 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
     }
   }
 
-  static class UseRecordSet {
-    HashSet set = new HashSet(10);
+  final static class UseRecordSet {
+    final HashSet<UseRecord> set = new HashSet<UseRecord>(10);
 
     // Does this set contain a use that has the same type as H and
     // the given value number?
@@ -411,14 +412,16 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    * @param key a key into the map
    * @return the set map(key).  create one if none exists.
    */
-  private final static HashSet findOrCreateIndexSet(HashMap map, Object key) {
-    HashSet result = (HashSet)map.get(key);
+  private final static <T> HashSet<T> findOrCreateIndexSet(HashMap<Object,HashSet<T>> map,
+                                                                         Object key) {
+    HashSet<T> result = map.get(key);
     if (result == null) {
-      result = new HashSet(5);
+      result = new HashSet<T>(5);
       map.put(key,result);
     }
     return result;
   }
+
   /**
    * Do a quick pass over the IR, and return types that are candidates
    * for redundant load elimination.
@@ -426,14 +429,16 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
    *    1) there's a load L(i) of type T 
    *    2) there's another load or store M(j) of type T, M!=L and V(i) == V(j)
    */
-  final public static Set getCandidates(OPT_IR ir) {
+  @SuppressWarnings("unchecked")
+  final public static HashSet<Object> getCandidates(OPT_IR ir) {
     OPT_GlobalValueNumberState valueNumbers = ir.HIRInfo.valueNumbers;
     // which types have we seen loads for?
-    HashSet seenLoad = new HashSet(10);
+    HashSet<Object> seenLoad = new HashSet<Object>(10);
     // which static fields have we seen stores for?
-    HashSet seenStore = new HashSet(10);
-    HashSet resultSet = new HashSet(10);
-    HashSet forbidden = new HashSet(10);
+    HashSet<VM_Field> seenStore = new HashSet<VM_Field>(10);
+    HashSet<Object> resultSet = new HashSet<Object>(10);
+    HashSet<VM_FieldReference> forbidden =
+      new HashSet<VM_FieldReference>(10);
     // for each type T, indices(T) gives the set of value number (pairs)
     // that identify the indices seen in memory accesses to type T.
     HashMap indices = new HashMap(10);
@@ -452,9 +457,10 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
                 if (f == null) {
                   forbidden.add(fr);
                 } else {
-                  HashSet numbers = findOrCreateIndexSet(indices,f);
+                  HashSet<Integer> numbers =
+                    findOrCreateIndexSet(indices,f);
                   int v = valueNumbers.getValueNumber(ref);
-                  Integer V = new Integer(v);
+                  Integer V = Integer.valueOf(v);
                   if (numbers.contains(V)) {
                     resultSet.add(f);
                   } else {
@@ -472,9 +478,10 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
                 if (f == null) {
                   forbidden.add(fr);
                 } else {
-                  HashSet numbers = findOrCreateIndexSet(indices,f);
+                  HashSet<Integer> numbers =
+                    findOrCreateIndexSet(indices,f);
                   int v = valueNumbers.getValueNumber(ref);
-                  Integer V = new Integer(v);
+                  Integer V = Integer.valueOf(v);
                   if (numbers.contains(V)) {
                     if (seenLoad.contains(f)) {
                       resultSet.add(f);
@@ -526,7 +533,8 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
                 }
                 OPT_Operand index = ALoad.getIndex(s);
 
-                HashSet numbers = findOrCreateIndexSet(indices, type);
+                HashSet<OPT_ValueNumberPair> numbers =
+                  findOrCreateIndexSet(indices, type);
                 int v1 = valueNumbers.getValueNumber(ref);
                 int v2 = valueNumbers.getValueNumber(index);
                 OPT_ValueNumberPair V = new OPT_ValueNumberPair(v1,v2);
@@ -555,7 +563,8 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
                 }
                 OPT_Operand index = AStore.getIndex(s);
 
-                HashSet numbers = findOrCreateIndexSet(indices,type);
+                HashSet<OPT_ValueNumberPair> numbers =
+                  findOrCreateIndexSet(indices,type);
                 int v1 = valueNumbers.getValueNumber(ref);
                 int v2 = valueNumbers.getValueNumber(index);
                 OPT_ValueNumberPair V = new OPT_ValueNumberPair(v1,v2);
@@ -603,7 +612,7 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
      * Cosntructor
      */
     public LoadEliminationPreparation(int round) {
-      super(new Object[]{new Integer(round)});
+      super(new Object[]{Integer.valueOf(round)});
       this.round = round;
     }
 
@@ -661,7 +670,7 @@ OPT_OptimizationPlanCompositeElement implements OPT_Operators {
      * Constructor
      */
     public GVNPreparation(int round) {
-      super(new Object[]{new Integer(round)});
+      super(new Object[]{Integer.valueOf(round)});
       this.round = round;
     }
 
